[project]
name = "rts-overlay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "appdirs>=1.4.4",
    "beautifulsoup4>=4.13.4",
    "imageio>=2.37.0",
    "levenshtein>=0.27.1",
    "nuitka>=2.6.9",
    "pillow>=11.2.1",
    "playsound==1.2.2",
    "pyinstaller>=6.13.0",
    "pynput>=1.8.1",
    "pyqt6>=6.9.0",
    "requests>=2.32.3",
    "thefuzz>=0.22.1",
]
